crates/ide/src/code_action/snapshots/ide__code_action__tests__code_action_edit_fixtures@convert_ansi_ports_to_non_ansi.sv.snap
---
source: crates/ide/src/code_action/tests.rs
expression: fixed
input_file: crates/ide/src/code_action/fixtures/code_actions/convert_ansi_ports_to_non_ansi.sv
---
module top(a, b);
    input a;
    output logic b;
    assign b = a;
endmodule
