crates/ide/src/code_action/snapshots/ide__code_action__tests__code_action_edit_fixtures@convert_assignment_to_postfix_inc_dec.sv.snap
---
source: crates/ide/src/code_action/tests.rs
expression: fixed
input_file: crates/ide/src/code_action/fixtures/code_actions/convert_assignment_to_postfix_inc_dec.sv
---
module top; always_comb begin i++; end endmodule
