crates/ide/src/code_action/snapshots/ide__code_action__tests__code_action_edit_fixtures@convert_non_ansi_ports_to_ansi_preserves_body_comments.sv.snap
---
source: crates/ide/src/code_action/tests.rs
expression: fixed
input_file: crates/ide/src/code_action/fixtures/code_actions/convert_non_ansi_ports_to_ansi_preserves_body_comments.sv
---
module top(input wire a, output logic b);
    // keep first
    
    // keep second
    
    assign b = a;
endmodule
