crates/ide/src/code_action/snapshots/ide__code_action__tests__code_action_edit_fixtures@convert_ordered_params_repair_names_ordered_assignments.sv.snap
---
source: crates/ide/src/code_action/tests.rs
expression: fixed
input_file: crates/ide/src/code_action/fixtures/code_actions/convert_ordered_params_repair_names_ordered_assignments.sv
---
module child #(parameter A = 1, parameter B = 2) (); endmodule
module top; child #(.A(8), .B(16)) u(); endmodule
